Create server to render html

--- a/src/notObfuscate.html
+++ b/src/notObfuscate.html
@@ -2,11 +2,12 @@
 
 <head>
     <script  src="https://code.jquery.com/jquery-3.4.1.min.js"   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
-    <script src="http://localhost:3000/static/dist/js/index.bundle.min.js"></script>
+    <script src="./index.js"></script>
+    <script src="../src/style/style.css"></script>
 </head>
 
 <body>
-    <h1>Obfuscado</h1>
+    <h1>Não Obfuscado</h1>
     <div>
         <span id="text" style="font-size: 30px">Digite o primeiro valor</span>
         <input type="text" id="first-number">
@@ -23,7 +24,8 @@
     </div>
     <p style="font-size: 30px">resultado: <span class="result" style="font-size: 30px"></span> </p>
 
-    <a href="notObfuscate.html">Não obfuscado</a>
+    <a href="index.html">Obfuscado</a>
+
 </body>
 
 </html>
