fixed express server to read absolute path

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </div>
     <p style="font-size: 30px">resultado: <span class="result" style="font-size: 30px"></span> </p>
 
-    <a href="notObfuscate.html">Não obfuscado</a>
+    <a href="/naoobfuscado">Não obfuscado</a>
 </body>
 
 </html>
