--- a/src/notObfuscate.html
+++ b/src/notObfuscate.html
@@ -2,8 +2,7 @@
 
 <head>
     <script  src="https://code.jquery.com/jquery-3.4.1.min.js"   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
-    <script src="../src/style/style.css"></script>
+    <script src="http://localhost:3000/indexjs"></script>
 </head>
 
 <body>
@@ -24,7 +23,7 @@
     </div>
     <p style="font-size: 30px">resultado: <span class="result" style="font-size: 30px"></span> </p>
 
-    <a href="index.html">Obfuscado</a>
+    <a href="/">Obfuscado</a>
 
 </body>
 
